finished createacct & login pages html

--- a/createacct.html
+++ b/createacct.html
@@ -1,6 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>TripSplit</title>
     </head>
+    <body>
+        <div class="acct-creation">
+            <h2>Create Account</h2>
+            <form>
+                <div class="user-box">
+                    <input type="text" name="" required="">
+                    <label>Username</label>
+                </div>
+                <div class="user-box">
+                    <input type="password" name="" required="">
+                    <label>Password</label>
+                </div>
+                <a href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Enter
+                </a>
+            </form>
+        </div>
+        <footer>
+            <hr />
+            <span class="text-reset">Have an account? Log in <a href="login.html">here</a></span>
+            <br />
+        </footer>
+    </body>
 </html>
