--- a/login.html
+++ b/login.html
@@ -26,5 +26,10 @@
                 </a>
             </form>
         </div>
+        <footer>
+            <hr />
+            <span class="text-reset">No account? Create one <a href="createacct.html">here</a></span>
+            <br />
+        </footer>
     </body>
 </html>
