changed login page to index & index to home

--- a/createacct.html
+++ b/createacct.html
@@ -28,7 +28,7 @@
         </div>
         <footer>
             <hr />
-            <span class="text-reset">Have an account? Log in <a href="login.html">here</a></span>
+            <span class="text-reset">Have an account? Log in <a href="index.html">here</a></span>
             <br />
         </footer>
     </body>
