--- a/createacct.html
+++ b/createacct.html
@@ -6,6 +6,9 @@
         <title>TripSplit</title>
     </head>
     <body>
+        <header>
+            <h1>TripSplit</h1>
+        </header>
         <div class="acct-creation">
             <h2>Create Account</h2>
             <form>
@@ -17,7 +20,7 @@
                     <input type="password" name="" required="">
                     <label>Password</label>
                 </div>
-                <a href="#">
+                <a href="home.html">
                     <span></span>
                     <span></span>
                     <span></span>
