finished home.html

--- a/home.html
+++ b/home.html
@@ -9,5 +9,19 @@
         <header>
             <h1>TripSplit</h1>
         </header>
+        <div class="host-box">
+            <form method="get" action="budget.html">
+                <label for="name">Host a group</label>
+                <input type="text" id="groupname" placeholder="Create a group name" />
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        <div class="join-box">
+            <form method="get" action="budget.html">
+                <label for="name">Join a group</label>
+                <input type="text" id="groupname" placeholder="Enter an existing group name" />
+                <button type="submit">Submit</button>
+            </form>
+        </div>
     </body>
 </html>
