center aligned website title

--- a/createacct.html
+++ b/createacct.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>TripSplit</h1>
+            <h1 align="center">TripSplit</h1>
         </header>
         <div class="acct-creation">
             <h2>Create Account</h2>
