--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>TripSplit</h1>
+            <h1 align="center">TripSplit</h1>
         </header>
         <div class="host-box">
             <form method="get" action="budget.html">
@@ -23,5 +23,8 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
+        <hr />
+            <span class="text-reset"><a href="index.html">Log out</a></span>
+        <br />
     </body>
 </html>
