--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>TripSplit</h1>
+            <h1 align="center">TripSplit</h1>
         </header>
         <div class="login-box">
             <h2>Log in</h2>
