added github links on all pages

--- a/budget.html
+++ b/budget.html
@@ -65,6 +65,8 @@
         <button type="newrow">Copy group invite link</button>
         <hr />
             <span class="text-reset"><a href="index.html">Log out</a></span>
+            <br><br>
+            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
         <br />
     </body>
 </html>
