--- a/createacct.html
+++ b/createacct.html
@@ -32,6 +32,8 @@
         <footer>
             <hr />
             <span class="text-reset">Have an account? Log in <a href="index.html">here</a></span>
+            <br><br>
+            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
             <br />
         </footer>
     </body>
