--- a/home.html
+++ b/home.html
@@ -25,6 +25,8 @@
         </div>
         <hr />
             <span class="text-reset"><a href="index.html">Log out</a></span>
+            <br><br>
+            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
         <br />
     </body>
 </html>
