--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <footer>
             <hr />
             <span class="text-reset">No account? Create one <a href="createacct.html">here</a></span>
+            <br><br>
+            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
             <br />
         </footer>
     </body>
