added links to an about page

--- a/budget.html
+++ b/budget.html
@@ -66,6 +66,7 @@
         <hr />
             <span class="text-reset"><a href="index.html">Log out</a></span>
             <br><br>
+            <span class="text-reset"><a href="about.html">About</a></span><br>
             <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
         <br />
     </body>
