--- a/createacct.html
+++ b/createacct.html
@@ -33,6 +33,7 @@
             <hr />
             <span class="text-reset">Have an account? Log in <a href="index.html">here</a></span>
             <br><br>
+            <span class="text-reset"><a href="about.html">About</a></span><br>
             <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
             <br />
         </footer>
