finished html version of about page

--- a/about.html
+++ b/about.html
@@ -9,29 +9,21 @@
         <header>
             <h1 align="center">TripSplit</h1>
         </header>
-        <div class="login-box">
-            <h2>Log in</h2>
-            <form>
-                <div class="user-box">
-                    <input type="text" name="" required="">
-                    <label>Username</label>
-                </div>
-                <div class="user-box">
-                    <input type="password" name="" required="">
-                    <label>Password</label>
-                </div>
-                <a href="home.html">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Enter
-                </a>
-            </form>
-        </div>
+        <h2>About TripSplit</h2>
+        TripSplit is a group budgeting app designed to make paying your friends easier when needing to split a multitude of costs. 
+        All you need to do is create an account, then join or create a group with a unique name. I decided to make this web application
+        when I ran into quite a few disputes about money when going on a trip with a few friends. If we had used TripSplit, it would have cleared
+        up a lot more about money and enabled clearer communication.
+        <h2>About me</h2>
+        My name is Chloe Guerrero, and I am a computer science student with a physics minor. I'm also silver certified in ballroom and social dance.
+        I also have a cat named Greyson who is my world. When I became a CS major I immediately knew that it was for me, and I'm very excited to see what 
+        more I accomplish in this field.<br>
+        <img alt="Chloe and Greyson" width="300" src="IMG-2650.JPG" />
         <footer>
-            <hr />
-            <span class="text-reset">No account? Create one <a href="createacct.html">here</a></span>
+            <hr /><!--displays either logged in or a need to log in-->
+            <!--include a back button so you don't have to have a link back to budget.html?-->
+            <!--You are logged in as user1.-->
+            <span class="text-reset">Log in <a href="createacct.html">here</a></span>
             <br><br>
             <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
             <br />
