--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
             </form>
         </div>
         <hr />
+            You are logged in as user1.
             <span class="text-reset"><a href="index.html">Log out</a></span>
             <br><br>
             <span class="text-reset"><a href="about.html">About</a></span><br>
