--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <hr /><!--displays either logged in or a need to log in-->
             <!--include a back button so you don't have to have a link back to budget.html?-->
             <!--You are logged in as user1.-->
-            <span class="text-reset">Log in <a href="createacct.html">here</a></span>
+            <span class="text-reset">Log in <a href="index.html">here</a></span>
             <br><br>
             <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
             <br />
