--- a/budget.html
+++ b/budget.html
@@ -31,7 +31,7 @@
                 <th> user1 </th>
                 <th> -user2 <br> -user3 </th>
                 <th> 
-                    <input type="checkbox" id="paidcheckbox" name="ipaid" value="checkbox1" />
+                    <input type="checkbox" id="paidcheckbox" name="ipaid" value="checkbox1" checked />
                 </th>
                 <th>
                     <input type="checkbox" id="notpayingcheckbox" name="notpaying" value="checkbox1" />
@@ -64,7 +64,13 @@
         </section>
         <button type="newrow">Copy group invite link</button>
         <hr />
+            You are logged in as user1.
             <span class="text-reset"><a href="index.html">Log out</a></span>
+            <br>
+            Log out of your group 
+            <span class="text-reset"><a href="home.html">here</a></span>.
+            <br>Leave your group 
+            <span class="text-reset"><a href="home.html">here</a></span>.
             <br><br>
             <span class="text-reset"><a href="about.html">About</a></span><br>
             <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
