--- a/about.html
+++ b/about.html
@@ -4,6 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TripSplit</title>
+
+        <link rel="stylesheet" href="main.css" />
+
+        <!-- Include bootstrap CSS framework -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+            crossorigin="anonymous"
+        />
     </head>
     <body>
         <header>
@@ -11,12 +21,11 @@
         </header>
         <h2>About TripSplit</h2>
         TripSplit is a group budgeting app designed to make paying your friends easier when needing to split a multitude of costs. 
-        All you need to do is create an account, then join or create a group with a unique name. I decided to make this web application
-        when I ran into quite a few disputes about money when going on a trip with a few friends. If we had used TripSplit, it would have cleared
+        All you need to do is create an account, then join or create a group with a unique name. <br><br> I decided to make this web application
+        when I ran into quite a few disputes about money when going on a trip with a group of friends. If we had used TripSplit, it would have cleared
         up a lot more about money and enabled clearer communication.
         <h2>About me</h2>
-        My name is Chloe Guerrero, and I am a computer science student with a physics minor. I'm also silver certified in ballroom and social dance.
-        I also have a cat named Greyson who is my world. When I became a CS major I immediately knew that it was for me, and I'm very excited to see what 
+        My name is Chloe Guerrero, and I am a computer science student with a physics minor. I'm also silver certified in ballroom and social dance and I have a cat named Greyson. I'm very excited to see what 
         more I accomplish in this field.<br>
         <img alt="Chloe and Greyson" width="300" src="IMG-2650.JPG" />
         <footer>
