almost finished css for login page

--- a/budget.html
+++ b/budget.html
@@ -6,6 +6,7 @@
         <title>TripSplit</title>
 
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="budget.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -83,7 +84,9 @@
             <span class="text-reset"><a href="home.html">here</a></span>.
             <br><br>
             <span class="text-reset"><a href="about.html">About</a></span><br>
-            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
         <br />
+        <footer>
+            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
+        </footer>
     </body>
 </html>
