--- a/createacct.html
+++ b/createacct.html
@@ -6,6 +6,7 @@
         <title>TripSplit</title>
 
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="loginbox.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -19,7 +20,7 @@
         <header>
             <h1 align="center">TripSplit</h1>
         </header>
-        <div class="acct-creation">
+        <div class="login-box">
             <h2>Create Account</h2>
             <form>
                 <div class="user-box">
