--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>TripSplit</title>
 
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="loginbox.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -16,11 +17,35 @@
         />
     </head>
     <body>
-        <header>
-            <h1 align="center">TripSplit</h1>
-        </header>
-        <div class="login-box">
-            <h2>Log in</h2>
+
+        <header class>
+            <nav class="navbar navbar-expand-lg">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="https://getbootstrap.com/">
+                    <h1 align="center">TripSplit</h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#btn">Button</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#card">Card</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+          </header>
+
+        <main class="login-box">
+            <h2>Login</h2>
             <form>
                 <div class="user-box">
                     <input type="text" name="" required="">
@@ -30,22 +55,29 @@
                     <input type="password" name="" required="">
                     <label>Password</label>
                 </div>
-                <a href="home.html">
+                <div class="text-center">
+                <a href="home.html" class="link-dark">
                     <span></span>
                     <span></span>
                     <span></span>
                     <span></span>
-                    Enter
+                    <button type="newrow">Enter</button>
                 </a>
+            </div>
+                <br><br>
+                <span class="text-reset">No account? Create one <a href="createacct.html" class="link-dark">here</a></span>
             </form>
-        </div>
-        <footer>
-            <hr />
-            <span class="text-reset">No account? Create one <a href="createacct.html">here</a></span>
-            <br><br>
-            <span class="text-reset"><a href="about.html">About</a></span><br>
-            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
-            <br />
+        </main>
+
+        <footer class="bg-dark fixed-bottom">
+            <div class="container-fluid">
+                <l class>
+                    <span class="text-reset"><a href="about.html" class="link-secondary">About</a></span>
+                </l>
+                <r class>
+                    <span class="text-reset"><a href="https://github.com/chloergu/startup" class="link-secondary">GitHub</a></span>
+                </r>
+            </div>
         </footer>
     </body>
 </html>
