finished login/create acct css, fixed all footers

--- a/about.html
+++ b/about.html
@@ -24,18 +24,24 @@
         All you need to do is create an account, then join or create a group with a unique name. <br><br> I decided to make this web application
         when I ran into quite a few disputes about money when going on a trip with a group of friends. If we had used TripSplit, it would have cleared
         up a lot more about money and enabled clearer communication.
+        
         <h2>About me</h2>
         My name is Chloe Guerrero, and I am a computer science student with a physics minor. I'm also silver certified in ballroom and social dance and I have a cat named Greyson. I'm very excited to see what 
         more I accomplish in this field.<br>
         <img alt="Chloe and Greyson" width="300" src="IMG-2650.JPG" />
-        <footer>
-            <hr /><!--displays either logged in or a need to log in-->
-            <!--include a back button so you don't have to have a link back to budget.html?-->
-            <!--You are logged in as user1.-->
-            <span class="text-reset">Log in <a href="index.html">here</a></span>
-            <br><br>
-            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
-            <br />
+        <br>
+        
+        <a href="javascript:history.back()" class="link-dark">Return to previous page.</a>
+
+        <footer class="bg-dark fixed-bottom">
+            <div class="container-fluid">
+                <l class>
+                    <span class="text-reset"><a href="about.html" class="link-secondary">About</a></span>
+                </l>
+                <r class>
+                    <span class="text-reset"><a href="https://github.com/chloergu/startup" class="link-secondary">GitHub</a></span>
+                </r>
+            </div>
         </footer>
     </body>
 </html>
