--- a/budget.html
+++ b/budget.html
@@ -17,6 +17,32 @@
         />
     </head>
     <body>
+        <header class>
+            <nav class="navbar navbar-expand-lg">
+              <div class="container-fluid">
+                <a class="navbar-brand text-center" href="https://getbootstrap.com/" >
+                    <h1 align="center">TripSplit</h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#btn">Button</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#card">Card</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+          </header>
+
         <header>
             <h1 align="center">TripSplit</h1>
         </header>
@@ -85,8 +111,16 @@
             <br><br>
             <span class="text-reset"><a href="about.html">About</a></span><br>
         <br />
-        <footer>
-            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
+        
+        <footer class="bg-dark fixed-bottom">
+            <div class="container-fluid">
+                <l class>
+                    <span class="text-reset"><a href="about.html" class="link-secondary">About</a></span>
+                </l>
+                <r class>
+                    <span class="text-reset"><a href="https://github.com/chloergu/startup" class="link-secondary">GitHub</a></span>
+                </r>
+            </div>
         </footer>
     </body>
 </html>
