--- a/createacct.html
+++ b/createacct.html
@@ -31,22 +31,23 @@
                     <input type="password" name="" required="">
                     <label>Password</label>
                 </div>
-                <a href="home.html">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Enter
-                </a>
+                <div class="text-center">
+                    <a href="home.html" class="btn btn-info" role="button">Enter</a>
+                    </div>
+                <br>
+                <span class="text-reset">Have an account? Log in <a href="index.html" class="link-dark">here</a></span>
             </form>
         </div>
-        <footer>
-            <hr />
-            <span class="text-reset">Have an account? Log in <a href="index.html">here</a></span>
-            <br><br>
-            <span class="text-reset"><a href="about.html">About</a></span><br>
-            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
-            <br />
+
+        <footer class="bg-dark fixed-bottom">
+            <div class="container-fluid">
+                <l class>
+                    <span class="text-reset"><a href="about.html" class="link-secondary">About</a></span>
+                </l>
+                <r class>
+                    <span class="text-reset"><a href="https://github.com/chloergu/startup" class="link-secondary">GitHub</a></span>
+                </r>
+            </div>
         </footer>
     </body>
 </html>
