--- a/home.html
+++ b/home.html
@@ -33,12 +33,18 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
-        <hr />
-            You are logged in as user1.
-            <span class="text-reset"><a href="index.html">Log out</a></span>
-            <br><br>
-            <span class="text-reset"><a href="about.html">About</a></span><br>
-            <span class="text-reset"><a href="https://github.com/chloergu/startup">GitHub</a></span>
-        <br />
+        <span class="text-reset">You are logged in as user1. <a href="index.html">Log out</a></span>
+
+        <footer class="bg-dark fixed-bottom">
+            <div class="container-fluid">
+                <l class>
+                    <span class="text-reset"><a href="about.html" class="link-secondary">About</a></span>
+                </l>
+                <r class>
+                    <span class="text-reset"><a href="https://github.com/chloergu/startup" class="link-secondary">GitHub</a></span>
+                </r>
+            </div>
+        </footer>
+
     </body>
 </html>
