--- a/index.html
+++ b/index.html
@@ -17,32 +17,9 @@
         />
     </head>
     <body>
-
-        <header class>
-            <nav class="navbar navbar-expand-lg">
-              <div class="container-fluid">
-                <a class="navbar-brand" href="https://getbootstrap.com/">
-                    <h1 align="center">TripSplit</h1>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#btn">Button</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#card">Card</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-          </header>
+        <header>
+            <h1 align="center">TripSplit</h1>
+        </header>
 
         <main class="login-box">
             <h2>Login</h2>
@@ -56,16 +33,14 @@
                     <label>Password</label>
                 </div>
                 <div class="text-center">
-                <a href="home.html" class="link-dark">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <button type="newrow">Enter</button>
-                </a>
+
+                <a href="home.html" class="btn btn-info" role="button">Enter</a>
+                
             </div>
-                <br><br>
+                <br>
+                <l class>
                 <span class="text-reset">No account? Create one <a href="createacct.html" class="link-dark">here</a></span>
+                </l>
             </form>
         </main>
 
