--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
         <title>TripSplit</title>
 
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="home.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -19,6 +20,7 @@
         <header>
             <h1 align="center">TripSplit</h1>
         </header>
+        <div class="text-center">
         <div class="host-box">
             <form method="get" action="budget.html">
                 <label for="name">Host a group</label>
@@ -26,15 +28,18 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
+        <br>
         <div class="join-box">
             <form method="get" action="budget.html">
                 <label for="name">Join a group</label>
-                <input type="text" id="groupname" placeholder="Enter an existing group name" />
+                <input type="text" id="groupname" placeholder="Enter an existing group" />
                 <button type="submit">Submit</button>
             </form>
         </div>
+        <br>
+        <img alt="mountains" width="500" src="mountains img.JPG" /><br>
         <span class="text-reset">You are logged in as user1. <a href="index.html">Log out</a></span>
-
+        </div>
         <footer class="bg-dark fixed-bottom">
             <div class="container-fluid">
                 <l class>
