finished budget example

--- a/budget.html
+++ b/budget.html
@@ -106,16 +106,46 @@
                     <button type="removerow">Delete expense</button>
                 </th>
                 </tr>
+                <tr>
+                    <td>$15</td>
+                    <td>Campground Rental</td>
+                    <td>user1</td>
+                    <td></td>
+                    <th> 
+                      <input type="checkbox" id="paidcheckbox" name="ipaid" value="checkbox1" checked />
+                  </th>
+                  <th>
+                      <input type="checkbox" id="notpayingcheckbox" name="notpaying" value="checkbox1" />
+                  </th>
+                  <th>
+                      <button type="removerow">Delete expense</button>
+                  </th>
+                  </tr>
+                  <tr>
+                    <td>$10</td>
+                    <td>Parking</td>
+                    <td>user1</td>
+                    <td></td>
+                    <th> 
+                      <input type="checkbox" id="paidcheckbox" name="ipaid" value="checkbox1" checked />
+                  </th>
+                  <th>
+                      <input type="checkbox" id="notpayingcheckbox" name="notpaying" value="checkbox1" />
+                  </th>
+                  <th>
+                      <button type="removerow">Delete expense</button>
+                  </th>
+                  </tr>
               </tbody>
             </table>
           </main>
 
         <button type="newrow">+ Add another expense</button>
         
-            <br>Total: $0<br><br>
-            You're owed:<br>
+            <br>Total: $110<br><br>
+            You're owed: $25.84<br>
             <button type="newrow">[Expand]</button>
-            <br>You owe:<br>
+            <br>You owe: $3.75<br>
             <button type="newrow">[Expand]</button>
             <br><br>You are in simplified mode.
             <button type="newrow">Details mode</button>
@@ -127,6 +157,7 @@
                 <li>user1</li>
                 <li>user2</li>
                 <li>user3</li>
+                <li>user4</li>
             </ul>
         </section>
         <button type="newrow">Copy group invite link</button>
