--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <title>TripSplit</title>
 
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="about.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -19,6 +20,8 @@
         <header>
             <h1 align="center">TripSplit</h1>
         </header>
+
+        <span class="border">
         <h2>About TripSplit</h2>
         TripSplit is a group budgeting app designed to make paying your friends easier when needing to split a multitude of costs. 
         All you need to do is create an account, then join or create a group with a unique name. <br><br> I decided to make this web application
@@ -32,6 +35,8 @@
         <br>
         
         <a href="javascript:history.back()" class="link-dark">Return to previous page.</a>
+
+        </span>
 
         <footer class="bg-dark fixed-bottom">
             <div class="container-fluid">
