--- a/budget.html
+++ b/budget.html
@@ -14,7 +14,11 @@
             rel="stylesheet"
             integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
             crossorigin="anonymous"
-        />
+        >
+        <link 
+            href="https://getbootstrap.com/docs/5.1/assets/css/docs.css" 
+            rel="stylesheet"
+        >
     </head>
     <body>
         <header class="sticky-top">
@@ -65,7 +69,7 @@
                   <td>$20</td>
                   <td>Gas</td>
                   <td>user1</td>
-                  <td> -user2 <br> -user3 </td>
+                  <td> -user2 </td>
                   <th> 
                     <input type="checkbox" id="paidcheckbox" name="ipaid" value="checkbox1" checked />
                 </th>
@@ -122,12 +126,12 @@
                   </th>
                   </tr>
                   <tr>
-                    <td>$10</td>
-                    <td>Parking</td>
-                    <td>user1</td>
+                    <td>$25</td>
+                    <td>Drinks</td>
+                    <td>user4</td>
                     <td></td>
                     <th> 
-                      <input type="checkbox" id="paidcheckbox" name="ipaid" value="checkbox1" checked />
+                      <input type="checkbox" id="paidcheckbox" name="ipaid" value="checkbox1" />
                   </th>
                   <th>
                       <input type="checkbox" id="notpayingcheckbox" name="notpaying" value="checkbox1" />
