--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
             </form>
         </div>
         <br>
-        <img alt="mountains" width="500" src="mountains img.JPG" /><br>
+        <img alt="mountains" width="500" src="mountains.JPG" /><br>
         <span class="text-reset">You are logged in as user1. <a href="index.html">Log out</a></span>
         </div>
         <footer class="bg-dark fixed-bottom">
