--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="about.css" />
+        <link rel="stylesheet" href="notbudget.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
