--- a/createacct.html
+++ b/createacct.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="loginbox.css" />
+        <link rel="stylesheet" href="notbudget.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -17,7 +18,7 @@
         />
     </head>
     <body>
-        <header>
+        <header class="sticky-top">
             <h1 align="center">TripSplit</h1>
         </header>
         <div class="login-box">
