--- a/budget.html
+++ b/budget.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TripSplit</title>
 
+        <script src="budget.js"></script>
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="budget.css" />
 
@@ -19,6 +20,7 @@
             href="https://getbootstrap.com/docs/5.1/assets/css/docs.css" 
             rel="stylesheet"
         >
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     </head>
     <body>
         <header class="sticky-top">
@@ -177,5 +179,7 @@
                 </r>
             </div>
         </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
