changes to login javascript

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="about.css" />
         <link rel="stylesheet" href="notbudget.css" />
+        <link rel="stylesheet" href="notloginbox.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
