--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="home.css" />
         <link rel="stylesheet" href="notbudget.css" />
+        <link rel="stylesheet" href="notloginbox.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -23,6 +24,7 @@
         </header>
         <div class="text-center">
         <div class="host-box">
+            <br>
             <form method="get" action="budget.html">
                 <label for="name">Host a group</label>
                 <input type="text" id="groupname" placeholder="Create a group name" />
