--- a/budget.html
+++ b/budget.html
@@ -8,6 +8,7 @@
         <script src="budget.js"></script>
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="budget.css" />
+        <link rel="stylesheet" href="notloginbox.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
