--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TripSplit</title>
 
+        <script src="budget.js"></script>
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="loginbox.css" />
         <link rel="stylesheet" href="notbudget.css" />
@@ -26,16 +27,16 @@
             <h2>Login</h2>
             <form>
                 <div class="user-box">
-                    <input type="text" name="" required="">
+                    <input type="username" name="userName" required="">
                     <label>Username</label>
                 </div>
                 <div class="user-box">
-                    <input type="password" name="" required="">
+                    <input type="password" name="userPass" required="">
                     <label>Password</label>
                 </div>
                 <div class="text-center">
 
-                <a href="home.html" class="btn btn-info" role="button">Enter</a>
+                <a class="btn btn-info" role="button" onclick="checkLogin()">Enter</a>
                 
                 </div>
                 <br>
