--- a/createacct.html
+++ b/createacct.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TripSplit</title>
 
-        <script src="budget.js"></script>
+        <script src="createaccount.js"></script>
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="loginbox.css" />
         <link rel="stylesheet" href="notbudget.css" />
@@ -26,15 +26,15 @@
             <h2>Create Account</h2>
             <form>
                 <div class="user-box">
-                    <input type="username" name="user" required="">
+                    <input type="text" id="user1" name="user1" required="">
                     <label>Username</label>
                 </div>
                 <div class="user-box">
-                    <input type="password" name="pass" required="">
+                    <input type="password" id="pass" name="pass" required="">
                     <label>Password</label>
                 </div>
                 <div class="text-center">
-                    <a class="btn btn-info" role="button" onclick="store()">Enter</a>
+                    <a class="btn btn-info" role="button" onClick="store()">Enter</a>
                     </div>
                 <br>
                 <span class="text-reset">Have an account? Log in <a href="index.html" class="link-dark">here</a></span>
@@ -51,5 +51,9 @@
                 </r>
             </div>
         </footer>
+
+        <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
+        <script type="text/javascript" language="javascript" src="createaccount.js"></script>
+
     </body>
 </html>
