--- a/budget.html
+++ b/budget.html
@@ -48,8 +48,11 @@
           </header>
 
         <header>
-            <h2 align="center">Group Name</h2>
+            <h2 align="center"><span class="group-name" id="group-name"></span></h2>
         </header>
+        <script>
+          document.getElementById("group-name").innerHTML = localStorage.getItem('groupName') ?? 'Anonymous';
+        </script>
 
         <main class="container-fluid bg-secondary text-center">
             <table class="table table-bordered table-secondary table-striped-columns">
@@ -182,5 +185,8 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+        <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
+        <script type="text/javascript" language="javascript" src="home.js"></script>
     </body>
 </html>
