--- a/budget.html
+++ b/budget.html
@@ -171,7 +171,7 @@
                 <li>user4</li>
             </ul>
         </section>
-        <button type="newrow">Copy group invite link</button>
+        <button type="newrow" onclick="copyInviteLink()">Copy group invite link</button>
         <span class="text-reset"><a href="index.html">Log out</a></span>
         
         <footer class="bg-dark fixed-bottom">
@@ -188,6 +188,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
         <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
-        <script type="text/javascript" language="javascript" src="home.js"></script>
+        <script type="text/javascript" language="javascript" src="budget.js"></script>
     </body>
 </html>
